Project

General

Profile

Actions

Fix #17136

closed

Fix accidental logic inversion in RGW hostname fallback

Added by Robin Johnson over 7 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
staticsite, rgw
Backport:
jewel
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The final version of #15975 contained an accidental logic reversion, that caused the final fallback only fire if the name of the bucket was INVALID, instead of VALID. This is fixes that inversion.


Related issues 2 (0 open2 closed)

Related to rgw - Bug #17279: auth failures (SignatureDoesNotMatch) in teuthology runsResolved09/15/2016

Actions
Related to rgw - Bug #17440: disable virtual hosting of buckets when no hostnames are configuredResolvedCasey Bodley09/29/2016

Actions
Actions #2

Updated by Casey Bodley over 7 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Casey Bodley over 7 years ago

  • Status changed from Pending Backport to In Progress

this fix leads to auth failures in teuthology. need to find a more complete solution

Actions #4

Updated by Casey Bodley over 7 years ago

  • Related to Bug #17279: auth failures (SignatureDoesNotMatch) in teuthology runs added
Actions #5

Updated by Casey Bodley over 7 years ago

  • Related to Bug #17440: disable virtual hosting of buckets when no hostnames are configured added
Actions #6

Updated by Robin Johnson almost 6 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF